// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. article summary headline component 1`] = `
<h3
  aria-label="PM hails breakthrough ahead of key Commons vote."
  aria-level="3"
  className="bigOne"
  role="heading"
>
  PM hails breakthrough ahead of key Commons vote
</h3>
`;

exports[`2. article summary strapline component 1`] = `
<h4
  aria-label="PM hails breakthrough ahead of key Commons vote."
  aria-level="4"
  role="heading"
>
  PM hails breakthrough ahead of key Commons vote
</h4>
`;
